# ComfyUI-MVNT

./: .gitignore  LICENSE  README.md  __init__.py  mvnt_client.py  nodes.py  pyproject.toml  requirements.txt
.github/workflows/: publish.yml
assets/: README_kr.md  mumu.glb
docs/: MVNT_API_SERVER_FLOW_kr.md  MVNT_COMFY_HANDOFF_kr.md  MVNT_PREVIEW_CAMERA_TRACKING_kr.md  MVNT_PREVIEW_DANCE_3D_kr.md
js/: mvnt_audio_segment.js  mvnt_preview_dance_3d.js
workflows/: Full_mS_Flow_01.json  MVNT4.2 - music_to_3d_dance.json  mvnt_4_2_music_to_3d_dance.json  mvnt_audio_to_dance.json  mvnt_compare_styles.json  mvnt_dance_with_preview.json  mvnt_full_ms_review_flow.json  mvnt_full_music_video.json  mvnt_image_to_tpose.json  mvnt_template_current_20260515.json
